--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Project with specified dependencies"
 authors = ["Your Name <your.email@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"  # Lub inna wersja Pythona
+python = "^3.13.0"  # Adjust Python version as needed
 dateutils = "0.6.12"
 numpy = "2.1.2"
 pandas = "2.2.3"
@@ -13,6 +13,8 @@ pip = "24.2"
 python-dateutil = "2.9.0.post0"
 pytz = "2024.2"
 six = "1.16.0"
+# Note: Tkinter is a built-in package in standard Python installations.
+# It does not need to be added to dependencies.
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
